<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Calender">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_reset_database" android:title="@string/action_reset_database"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_task" android:title="@string/action_add_task"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_event" android:title="@string/action_add_event"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
