<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="brothers.scheucher.taskbro.AddLabel"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_label_title"
            style="@style/TitleText"
            android:hint="Labelname"
            />

        <TextView
            android:text="@string/choose_color"
            style="@style/DescriptionText"
            />

        <TextView
            android:id="@+id/add_label_color"
            android:text="@string/no_color_selected"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:background="@null"

            android:height="48dp"
            />

        <TextView
            android:text="@string/label_strucutre_text"
            style="@style/DescriptionText"
        />
        <LinearLayout
            android:id="@+id/add_label_parentlabel_container"
            android:layout_below="@+id/add_task_deadline_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:id="@+id/add_label_parentlabel"
                android:layout_weight="2"
                android:text="Kein Label"
                style="@style/NormalText"
                />

            <TextView
                android:id="@+id/add_label_parentlabel_color"
                android:layout_width="20dp"
                android:layout_weight="1"
                android:layout_height="20dp"
                android:background="@null"
                />
        </LinearLayout>


        <Button
            android:id="@+id/add_label_delete_button"
            android:text="Label löschen"
            style="@style/DeleteButton"
            />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
